Cambio de titulo por lista de cursos de DevOps de Alura

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UFT-8">
-        <title>Cursos deDevOps de Alura</title>
+        <title>Lista de Cursos deDevOps de Alura</title>
     </head>
     <body>
         <ul>
