--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UFT-8">
-        <title>Cursos de Alura</title>
+        <title>Cursos de DevOps de Alura</title>
     </head>
     <body>
         <ul>
@@ -10,6 +10,7 @@
             <li>Docker</li>
             <li>Ansible</li>
             <li>Integracion Continua: Madurez y Productividad en el Desarrollo dE Software</li>
+            <li>Kubernetes</li>
         </ul>
     </body>
 </html>
