--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul>
-            <li>Vagrant</li>
+            <li>Vagrant: Gerenciando maáquinas virtuales</li>
             <li>Docker: Creando containers sin dolor de cabeza</li>
             <li>Ansible</li>
             <li>Integracion Continua: Madurez y Productividad en el Desarrollo dE Software</li>
