--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Vagrant: Gerenciando maáquinas virtuales</li>
             <li>Docker: Creando containers sin dolor de cabeza</li>
-            <li>Ansible</li>
+            <li>Ansible: Su infraestructura como código</li>
             <li>Integracion Continua: Madurez y Productividad en el Desarrollo de Software</li>
             <li>Kubernetes: Introducción a la orquestación de containers</li>
         </ul>
